# analytics-collector

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: branch-protection.yaml  continuous-delivery.yaml
assets/: .gitignore  package.json  tsconfig.json
assets/src/: index.ts
assets/src/collectors/: anchors.ts
client/: .gitignore  package-lock.json  package.json  tsconfig.json
client/src/: index.ts
client/src/collectors/: anchor.ts  page_view.ts  turbo_drive.ts
dev/: docker-compose.yaml
k8s/: deployment.yaml  httproute.yaml  kustomization.yaml  namespace.yaml  service-account.yaml  service.yaml
migrations/: 0000_events.sql  0001_add_app_id.sql  0002_create_recorded_by.sql  0003_allow_null_app_id.sql  0004_drop_app_id.sql  schema.sql
src/: errors.rs  exporter.rs  main.rs  middleware.rs  responses.rs  schema.json  schemas.rs  storage.rs  utilities.rs
src/exporter/: parquet.rs  postgresql.rs  prometheus.rs
src/exporter/parquet/: schema.rs  serializer.rs
src/storage/: google_storage.rs  memory.rs  prometheus.rs
src/storage/google_storage/: auth.rs
src/utilities/: google_auth.rs
tests/integration/: .gitignore  package-lock.json  package.json  playwright.config.js  tsconfig.json
tests/integration/public/: index.html
tests/integration/public/second/: index.html
tests/integration/src/: index.html  index.ts  turbo.html
tests/integration/src/turbo/: second.html  third.html
tests/integration/tests/: page_view.spec.js
