[package]
name = "analytics-collector"
version = "1.1.0-dev"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98" }
arrow = { version = "55.1.0" }
arrow-schema = "55.2.0"
axum = { version = "0.8.4" }
chrono = { version = "0.4.41" }
jsonschema = { version = "0.30.0" }
libsql = { version = "0.9.11", default-features = false, features = ["core"] }
parquet = { version = "55.1.0", features = ["arrow"] }
prometheus-client = { version = "0.23.1" }
reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls", "json"] }
rust-database-common = { git = "https://github.com/corybuecker/rust-database-common", branch = "main" }
rust-web-common = { git = "https://github.com/corybuecker/rust-web-common", branch = "main" }
serde = { version = "1.0.219" }
serde_json = { version = "1.0.140" }
thiserror = "2.0.12"
tokio = { version = "1.45.0", default-features = false, features = ["rt-multi-thread", "tracing", "macros", "signal", "fs"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = { version = "0.1.41" }
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = ["v4"] }
